	
  * data/gtkpod.glade:
  
    Small fixes to the info window.
	
  * src/prefs.c:
  * src/prefs.h:
  * src/file_convert.c:
  
    Added new settings:
    - conversion_enable: skip any conversion if this is false (default: true)
	- conversion_target_format: format to convert to (default: MP3; only used in prefsdlg.c)
  
  * src/prefsdlg.c:
  
    Conversion preferences.

2007-12-30 P.G. Richardson <phantom_sf at users.sourceforge.net>

  * data/gtkpod.glade
  
  Added the photo window toolbar back in. Seems it may have been lost by
  accident and it is required for some functions for the moment.

2007-12-29 Matvey Kozhev <sikon at users.sourceforge.net>

  * data/gtkpod.glade:
  * src/prefsdlg.c:
  
    Filename parse preferences
    Cover art search preferences
	File mask exclusion preferences
	mserv preferences
	Commands preferences
	
  * data/default-cover.png:
  
    Less fugly and 1996-style picture
	
  * src/display_coverart.c:
  
    Set resize algorithm to GDK_INTERP_BILINEAR - yields nicer-looking images
	
  * src/charset.c:
  
    Added missing call to g_free
	
  * src/display_spl.c:
  
    Initial HIGification of the smart playlist dialog.

2007-12-28 Matvey Kozhev <sikon at users.sourceforge.net>

  * data/gtkpod.glade:
  
    Fixed sort window crash related to absence of tooltips. Marked
	"Dummy - do not delete"	as not translatable.
	
  * src/charset.c:
  * src/charset.h:
  
    Implemented charset_init_combo_box as a drop-in replacement
	for charset_init_combo
	
  * src/prefsdlg.c:
  
    Encoding dialog

2007-12-27 P.G. Richardson <phantom_sf at users.sourceforge.net>

  * src/prefs_window.c
  
    Fixed potential memory leak in on_coverart_display_bg_color_set
    
  * data/gtkpod.glade
  * src/prefsdlg.c
  
    Support for change background colour added to new prefs dialog

2007-12-27 P.G. Richardson <phantom_sf at users.sourceforge.net>

  * data/cdshine.png
  * data/cdshine_main.png
  * data/Makefile.am
  